@@ -1,6 +1,7 @@
 BBmisc_1.9
 - New argument .newline for messagef
 - New argument suppress.startup for requirePackages
+- requirePackages can now dispatch to requireNamespace (and does that by default)
 
 BBmisc_1.8
 - Options for the ProgressBar can now be directly passed to the constructor.
